@@ -58,6 +58,30 @@ GRPsubgroup5(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid, co
 }
 
 str
+GRPsubgroup9(bat *ngid, bat *next, const bat *bid, const bat *sid, const bat *gid, const bat *eid, const bat *hid)
+{
+	return GRPsubgroup5(ngid, next, NULL, bid, sid, gid, eid, hid);
+}
+
+str
+GRPsubgroup8(bat *ngid, bat *next, const bat *bid, const bat *gid, const bat *eid, const bat *hid)
+{
+	return GRPsubgroup5(ngid, next, NULL, bid, NULL, gid, eid, hid);
+}
+
+str
+GRPsubgroup7(bat *ngid, bat *next, const bat *bid, const bat *sid, const bat *gid)
+{
+	return GRPsubgroup5(ngid, next, NULL, bid, sid, gid, NULL, NULL);
+}
+
+str
+GRPsubgroup6(bat *ngid, bat *next, const bat *bid, const bat *gid)
+{
+	return GRPsubgroup5(ngid, next, NULL, bid, NULL, gid, NULL, NULL);
+}
+
+str
 GRPsubgroup4(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *gid, const bat *eid, const bat *hid)
 {
 	return GRPsubgroup5(ngid, next, nhis, bid, NULL, gid, eid, hid);
@@ -73,6 +97,18 @@ str
 GRPsubgroup2(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *gid)
 {
 	return GRPsubgroup5(ngid, next, nhis, bid, NULL, gid, NULL, NULL);
+}
+
+str
+GRPgroup4(bat *ngid, bat *next, const bat *bid, const bat *sid)
+{
+	return GRPsubgroup5(ngid, next, NULL, bid, sid, NULL, NULL, NULL);
+}
+
+str
+GRPgroup3(bat *ngid, bat *next, const bat *bid)
+{
+	return GRPsubgroup5(ngid, next, NULL, bid, NULL, NULL, NULL, NULL);
 }
 
 str
