@@ -1131,10 +1131,16 @@ str FCTshutdown(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str GROUPmulticolumngroup(Client cntxt, MalBlkPtr mb, MalStkPtr stk, InstrPtr pci);
 str GRPgroup1(bat *ngid, bat *next, bat *nhis, const bat *bid);
 str GRPgroup2(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid);
+str GRPgroup3(bat *ngid, bat *next, const bat *bid);
+str GRPgroup4(bat *ngid, bat *next, const bat *bid, const bat *sid);
 str GRPsubgroup2(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *gid);
 str GRPsubgroup3(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid, const bat *gid);
 str GRPsubgroup4(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *gid, const bat *eid, const bat *hid);
 str GRPsubgroup5(bat *ngid, bat *next, bat *nhis, const bat *bid, const bat *sid, const bat *gid, const bat *eid, const bat *hid);
+str GRPsubgroup6(bat *ngid, bat *next, const bat *bid, const bat *gid);
+str GRPsubgroup7(bat *ngid, bat *next, const bat *bid, const bat *sid, const bat *gid);
+str GRPsubgroup8(bat *ngid, bat *next, const bat *bid, const bat *gid, const bat *eid, const bat *hid);
+str GRPsubgroup9(bat *ngid, bat *next, const bat *bid, const bat *sid, const bat *gid, const bat *eid, const bat *hid);
 str IDentifier(identifier *retval, str *in);
 int IDfromString(str src, int *len, identifier *retval);
 str IDprelude(void *ret);
